manifest/availability-api-services.yml
apiVersion: v1
kind: Service
metadata:
  name: availability-api-service
spec:
  type: ClusterIP
  selector:
    app: availability-api-deployment
  ports:
    - port: 80
