manifest/availability-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: availability-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/PhysicianAvailability/GetSchedule/?p*
        pathType: Prefix
        backend:
          service:
            name: availability-api-service
            port:
              number: 80
      - path: /api/PhysicianAvailability/AddSchedule
        pathType: Prefix
        backend:
          service:
            name: availability-api-service
            port:
              number: 80
      - path: /api/PhysicianAvailability/UpdateAllSchedules/?p*
        pathType: Prefix
        backend:
          service:
            name: availability-api-service
            port:
              number: 80
